Ускорили вставку и обновление записей справочников для всех бэкэндов