@@ -132,6 +132,7 @@ public class DictService
 	// сейчас обновляется схема только для DictField и DictEnum, последний только в монго.
 	@LockDictSchemaModifyOperation("#dictId")
 	@CachePut(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS, key = "#dictId")
 	public Dict update(String dictId, Dict dict)
 	{
 		var actualDict = getById(dictId);
@@ -189,7 +190,7 @@ public class DictService
 	@Transactional
 	//	TODO: История изменений схемы, даты создания/обновления схемы?
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(value = {DictsConfiguration.CACHE_NAME_DICTS, DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS}, key = "#dictId")
 	public void delete(String dictId)
 	{
 		var dict = getById(dictId);
@@ -204,7 +205,7 @@ public class DictService
 
 	@Transactional
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(value = {DictsConfiguration.CACHE_NAME_DICTS, DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS}, key = "#dictId")
 	public DictField renameField(String dictId, String fieldId, String newFieldId, String newFieldName)
 	{
 		var dict = getById(dictId);
@@ -431,7 +432,7 @@ public class DictService
 
 	@Transactional
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(value = {DictsConfiguration.CACHE_NAME_DICTS}, key = "#dictId")
 	public void deleteEnum(String dictId, String enumId)
 	{
 		var dict = getById(dictId);
@@ -460,14 +461,13 @@ public class DictService
 		dictBackend.deleteEnum(dict, enumId);
 	}
 
-	// TODO: кэш
-	public static List<DictField> getDataFieldsByDict(Dict dict)
+	@Cacheable(value = DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS)
+	public List<DictField> getDataFieldsByDict(Dict dict)
 	{
 		return dict.getFields()
 				.stream()
 				.filter(it -> !ServiceFieldConstants.getServiceSchemeFields().contains(it.getId()))
-//				FIXME: На данном этапе коллекция должна быть изменяемой
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	// TODO: кэш
